# Chess

./: README.md  chess.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: AI.hs  CheckEnd.hs  Chessboard.hs  Color.hs  Main.hs  Moves.hs  Position.hs  WinCheck.hs
